Fix: Invalid value in letter-spacing

--- a/src/components/DateItem/dateCard.css
+++ b/src/components/DateItem/dateCard.css
@@ -13,7 +13,7 @@
 .date__month,
 .date__year {
   text-transform: uppercase;
-  letter-spacing: 2;
+  letter-spacing: 0.1rem;
 }
 
 .date__day {
